--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "i18next": "^23.11.5",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18",
-    "react-i18next": "^14.1.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
