--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.4",
     "i18next": "^23.11.5",
     "next": "14.2.4",
     "next-intl": "^3.15.0",
