--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:styles": "stylelint \"**/*.{scss,css}\"",
+    "lint:styles:fix": "stylelint \"**/*.{scss,css}\" --fix"
   },
   "dependencies": {
     "@next/third-parties": "^14.2.4",
+    "clsx": "^2.1.1",
     "i18next": "^23.11.5",
     "next": "14.2.4",
     "next-intl": "^3.15.0",
@@ -33,6 +36,8 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "prettier": "3.3.2",
     "sass": "^1.77.5",
+    "stylelint": "^16.6.1",
+    "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "^5"
   }
 }
