--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "next/core-web-vitals",
     "prettier"
   ],
+  "plugins": ["sort-exports"],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
@@ -14,9 +15,18 @@
       "off",
       { "target": "any" }
     ],
+    "sort-imports": ["error", {
+      "ignoreCase": false,
+      "ignoreDeclarationSort": false,
+      "ignoreMemberSort": false,
+      "memberSyntaxSortOrder": ["none", "all", "multiple", "single"],
+      "allowSeparatedGroups": true
+    }],
+    "sort-exports/sort-exports": ["error", {"sortDir": "asc"}],
     "react/jsx-props-no-spreading": ["error", {
       "html": "ignore"
     }],
-    "react/function-component-definition": ["error", { "namedComponents": "arrow-function" }]
+    "react/function-component-definition": ["error", { "namedComponents": "arrow-function" }],
+    "react/require-default-props": "off"
   }
 }
