--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.1.1",
     "i18next": "^23.11.5",
     "next": "14.2.4",
-    "next-intl": "^3.15.0",
+    "next-intl": "^3.15.2",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -34,6 +34,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-sort-exports": "^0.9.1",
     "prettier": "3.3.2",
     "sass": "^1.77.5",
     "stylelint": "^16.6.1",
