--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
     "next/core-web-vitals",
     "prettier"
   ],
-  "plugins": ["sort-exports"],
+  "plugins": ["simple-import-sort"],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
@@ -15,14 +15,8 @@
       "off",
       { "target": "any" }
     ],
-    "sort-imports": ["error", {
-      "ignoreCase": false,
-      "ignoreDeclarationSort": false,
-      "ignoreMemberSort": false,
-      "memberSyntaxSortOrder": ["none", "all", "multiple", "single"],
-      "allowSeparatedGroups": true
-    }],
-    "sort-exports/sort-exports": ["error", {"sortDir": "asc"}],
+    "simple-import-sort/imports": "error",
+    "simple-import-sort/exports": "error",
     "react/jsx-props-no-spreading": ["error", {
       "html": "ignore"
     }],
