--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,8 @@
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error",
     "react/jsx-props-no-spreading": ["error", {
-      "html": "ignore"
+      "html": "ignore",
+      "exceptions": ["Component", "Text"]
     }],
     "react/function-component-definition": ["error", { "namedComponents": "arrow-function" }],
     "react/require-default-props": "off"
