--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "@next/third-parties": "^14.2.4",
     "clsx": "^2.1.1",
-    "i18next": "^23.11.5",
     "next": "14.2.4",
     "next-intl": "^3.15.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "rtl-detect": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
