--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "next dev --turbo",
+    "build": "next build --turbo",
+    "start": "next start --turbo",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "lint:styles": "stylelint \"**/*.{scss,css}\"",
     "lint:styles:fix": "stylelint \"**/*.{scss,css}\" --fix"
   },
@@ -20,6 +21,7 @@
     "rtl-detect": "^1.1.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
