--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build --turbo",
-    "start": "next start --turbo",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start ",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "lint:styles": "stylelint \"**/*.{scss,css}\"",
