--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,7 @@ jobs:
     environment: github-pages
     env:
       NEXT_PUBLIC_GTM: ${{ secrets.NEXT_PUBLIC_GTM }}
+      NEXT_PUBLIC_GOOGLE_VERIFICATION: ${{ secrets.NEXT_PUBLIC_GOOGLE_VERIFICATION }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
