debug github pages

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,7 +58,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "lts/*"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
+          cache: ${{ steps.deployment.outputs.page_url }}
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
