--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,7 @@ jobs:
     env:
       NEXT_PUBLIC_GTM: ${{ secrets.NEXT_PUBLIC_GTM }}
       NEXT_PUBLIC_GOOGLE_VERIFICATION: ${{ secrets.NEXT_PUBLIC_GOOGLE_VERIFICATION }}
+      NEXT_PUBLIC_SITE_URL: https://deivoff.github.io
     steps:
       - name: Checkout
         uses: actions/checkout@v4
